[package]
name = "ffswget"
version = "0.1.0"
authors = ["Antonio Mika <antoniomika@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ffsend-api = { git = "https://github.com/antoniomika/ffsend-api" }
rocket = "0.4"
mime_guess = "2.0"
lazy_static = "1.4"

[[bin]]
name = "ffswget"
path = "src/main.rs"
